# route_solver_service

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_eclipse.sh
cmake/: FindLibOSRM.cmake
data/: bad_task.json  check.txt  circle.csv  circle.json  circle.ods  error_req.json  exception.json  table_data.json  task.json  task_for_backend.json  test1.json  test2.json  test3.json  test4.json  test_http.txt  urls.txt
data/circle_csv/: tasks.csv
data/export/: tasks.csv  venchile_12284.csv  venchile_12286.csv  venchile_12287.csv
data/zones/: 6272.txt  6273.txt  6452.txt  6472.txt  6473.txt  6525.txt  6529.txt  6560.txt  6561.txt  6562.txt  6741.txt  7021.txt  7748.txt  9143.txt
docker/build-img/: Dockerfile
docker/run-img/: Dockerfile
golang/src/backend/: callbacks.go  main.go  structs.go
include/parser/: json_parser.hpp
include/solve/: solver.hpp
include/wrapper/: interface.hpp
libs/route_solver/: CMakeLists.txt
libs/route_solver/include/route_solver/: log.hpp
libs/route_solver/include/route_solver/abc/: abc.hpp  abc_common.hpp  abc_parallel.hpp
libs/route_solver/include/route_solver/solution/: bench_loader.hpp  currentroutestate.hpp  fail_statistics.hpp  truck_solution.hpp
libs/route_solver/include/route_solver/solve/: truck_solver.hpp  vehicle_to_task_checker.hpp  winding_number.hpp
libs/route_solver/include/route_solver/structs/: data_structs.hpp
libs/route_solver/include/route_solver/utils/: common.hpp
libs/route_solver/src/console/: CMakeLists.txt  main.cpp
libs/route_solver/src/lib/: CMakeLists.txt  log.cpp
libs/route_solver/src/lib/solution/: bench_loader.cpp  currentroutestate.cpp  fail_statistics.cpp  truck_solution.cpp
libs/route_solver/src/lib/solve/: truck_solver.cpp  vehicle_to_task_checker.cpp  winding_number.cpp
libs/route_solver/src/lib/structs/: data_structs.cpp
libs/route_solver/src/lib/utils/: common.cpp
libs/route_solver/unit_tests/: CMakeLists.txt  abc_test.cpp  cuda_func_opt.cu  cuda_func_opt.hpp  gh_bench_test.cpp  random_test.cpp
profiles/: truck.lua
scripts/: prepare_build_img.sh  prepare_deb.sh  prepare_map.sh  prepare_run_img.sh  run.sh
src/console/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/parser/: json_parser.cpp
src/lib/solve/: solver.cpp
src/wrapper/: CMakeLists.txt  interface.cpp
tests/: CMakeLists.txt  assign_test.cpp  test_data.hpp  workzone_unit_test.cpp
