project(unit_tests)
enable_testing()
find_package(GTest REQUIRED)

function(add_test_helper test_target_name internal_test_name test_src_list )
    add_executable(${test_target_name} ${test_src_list})
    target_link_libraries(${test_target_name} route_solver GTest::GTest GTest::Main ${Boost_LIBRARIES})
    add_test(${internal_test_name} ${test_target_name})
endfunction(add_test_helper)

add_test_helper(abc_tests ABCTests abc_test.cpp)
add_test_helper(g_and_h_bench_tests GaH_bench_tests gh_bench_test.cpp)
add_test_helper(random_test RandomTest random_test.cpp)

option(ENABLE_CUDA OFF)
if (ENABLE_CUDA)
	find_package(CUDA 7.5 REQUIRED)
	add_definitions("-DCUDA_ENABLED")
	include_directories(${CUDA_INCLUDE_DIRS})
	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_50,code=sm_50;-std=c++11 -D_FORCE_INLINES -D_MWAITXINTRIN_H_INCLUDED")
	set(CUDA_PROPAGATE_HOST_FLAGS OFF)
endif()
if (CUDA_FOUND)
	cuda_add_library(cuda_tests_support cuda_func_opt.cu cuda_func_opt.hpp)
	target_link_libraries(cuda_tests_support ${CUDA_LIBRARIES})
	target_link_libraries(abc_tests cuda_tests_support)
endif()
